add nullable annos